--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,46 @@
-/* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.main{
+  text-align: center;
+  transform: translate(0,50%);
+}
+h1 {
+  color: #88B04B;
+  font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+  font-weight: 900;
+  font-size: 40px;
+  margin-bottom: 10px;
+}
+p {
+  color: #404F5E;
+  font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+  font-size:20px;
+  margin: 0;
+}
+.success {
+color: #9ABC66;
+font-size: 100px;
+line-height: 200px;
+margin-left:-15px;
+}
+
+.cancel {
+  color: #f70000;
+  font-size: 100px;
+  line-height: 200px;
+  margin-left:-15px;
+}
+.card1 {
+background: white;
+padding: 60px;
+border-radius: 4px;
+box-shadow: 0 2px 3px #C8D0D8;
+display: inline-block;
+margin: 0 auto;
+}
+.check{
+  border-radius:200px;
+  height:200px;
+  width:200px;
+  background: #F8FAF5;
+  margin:0 auto;
+}
